[package]
name = "rtorrent-xmlrpc-bindings"
description = "XMLRPC API bindings for rtorrent"
repository = "https://github.com/cemeyer/rtorrent-xmlrpc-bindings"
categories = ["api-bindings"]
keywords = ["rtorrent", "xmlrpc", "rpc", "remote", "control"]
license = "MIT"
version = "1.0.4"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xmlrpc = "0.15.0"
